--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,28 @@ node_js: "8"
 
 jobs:
   include:
+    - env:
+        - ELECTRON_CACHE=$HOME/.cache/electron
+        - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+    - cache:
+      directories:
+      - node_modules
+      - release-builds
+      - $HOME/.cache/electron
+      - $HOME/.cache/electron-builder
     - stage: Lint
       script: npm run lint
     - stage: Test
     - stage: Coverage
       script: npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+
+    - stage: Release
+      script:
+        - npm run electron-packager:mac
+        - npm run electron-packager:linux
+        - npm run electron-packager:win
+      cache:
+        - dist
 
     - stage: Build and push tomomaster image (untagged)
       services:
@@ -47,4 +64,5 @@ stages:
   - name: Build and push tomomaster image (untagged)
     if: type != pull_request AND branch = master AND tag IS blank AND repo = tomochain/tomomaster
   - name: Build and push tomomaster image (tagged)
+  - name: Release
     if: type != pull_request AND branch =~ ^v AND tag IS present AND repo = tomochain/tomomaster
