--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
     "version": "1.0.0",
     "description": "TomoChain Governance DApp",
     "main": "elect.js",
-    "directories": {
-        "test": "test"
-    },
     "scripts": {
         "lint": "eslint --cache ./ --ext .vue --ext .js",
         "lint-fix": "eslint --cache ./ --ext .vue --ext .js --fix",
@@ -20,6 +17,7 @@
         "abis": "node ./abis.js",
         "coverage": "./node_modules/.bin/solidity-coverage",
         "electron:start": "electron .",
+        "dist": "build",
         "electron-packager:mac": "electron-packager . tomochain-mac-app --overwrite --platform=darwin --arch=x64 --icon=app/assets/img/icon.icns --prune=true --out=release-builds",
         "electron-packager:linux": "electron-packager . tomochain-linux-app --overwrite --asar=true --platform=linux --arch=x64 --icon=app/assets/img/icon.png --prune=true --out=release-builds",
         "electron-packager:win": "electron-packager . tomochain-windows-app --overwrite --asar=true --platform=win32 --arch=x64 --icon=app/assets/img/icon.ico --prune=true --out=release-builds"
@@ -67,6 +65,7 @@
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.11",
         "electron": "^2.0.8",
+        "electron-builder": "^20.28.3",
         "electron-packager": "^12.1.1",
         "eslint": "^4.19.1",
         "eslint-config-standard": "^11.0.0",
@@ -96,5 +95,18 @@
         "webpack": "^4.6.0",
         "webpack-cli": "^2.0.15",
         "webpack-dev-server": "^3.1.3"
+    },
+    "build": {
+        "appId": "tomochain",
+        "win": {
+            "target": "squirrel",
+            "icon": "app/assets/img/icon.ico"
+        },
+        "linux": {
+            "target": [
+                "AppImage"
+            ],
+            "icon": "app/assets/img/icon.png"
+        }
     }
 }
