--- a/.travis.yml
+++ b/.travis.yml
@@ -16,37 +16,6 @@ jobs:
     - stage: Coverage
       script: npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
 
-      - stage: Release1
-      env:
-        - ELECTRON_CACHE=$HOME/.cache/electron
-        - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
-
-      before_cache:
-        - rm -rf $HOME/.cache/electron-builder/wine
-      script:
-        - |
-          if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-            docker run --rm \
-              --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
-              -v ${PWD}:/project \
-              -v ~/.cache/electron:/root/.cache/electron \
-              -v ~/.cache/electron-builder:/root/.cache/electron-builder \
-              electronuserland/builder:wine \
-              /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn dist -mwl"
-          else
-            :
-          fi
-      deploy:
-        provider: releases
-        api_key: $GH_TOKEN
-        file_glob: true
-        file: release-builds/*
-        skip_cleanup: true
-        overwrite: true
-        on:
-          tags: false
-          all_branches: true
-
     - stage: Release desktop application
       env:
         - ELECTRON_CACHE=$HOME/.cache/electron
@@ -75,7 +44,8 @@ jobs:
         skip_cleanup: true
         overwrite: true
         on:
-          tags: true
+          tags: false
+          all_branches: true
 
     - stage: Build and push image
       services:
@@ -142,7 +112,7 @@ stages:
   - name: Test
   - name: Coverage
   - name: Build and push image
-  - name: Release1
+  - name: Release desktop application
     if: type != pull_request AND branch = master AND tag IS blank AND repo = tomochain/tomomaster
   - name: Build and push image (tagged)
     if: type != pull_request AND branch =~ ^v AND tag IS present AND repo = tomochain/tomomaster
