--- a/.travis.yml
+++ b/.travis.yml
@@ -116,7 +116,7 @@ stages:
     if: type != pull_request AND branch = master AND tag IS blank AND repo = tomochain/tomomaster
   - name: Build and push image (tagged)
     if: type != pull_request AND branch =~ ^v AND tag IS present AND repo = tomochain/tomomaster
-  - name: Release desktop application
+  # - name: Release desktop application
     if: type != pull_request AND branch =~ ^v AND tag IS present AND repo = tomochain/tomomaster
   - name: Deploy in devnet
     if: type != pull_request AND branch = master AND repo = tomochain/tomomaster
